<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/lin_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/circular_progress_bar"
            android:background="@drawable/circle_shape"
            android:layout_gravity="center_horizontal" />

        <GridView
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:numColumns="6"
            android:stretchMode="columnWidth" />

        <CheckBox
            android:id="@+id/mode_crayon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mode_crayon_label" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lin_btn_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/raz_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_1_background"
                        android:padding="8dp"
                        android:text="@string/raz_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />

                    <Button
                        android:id="@+id/help_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_3_background"
                        android:padding="8dp"
                        android:text="@string/help_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_btn_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/new_game_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_2_background"
                        android:padding="8dp"
                        android:text="@string/new_game_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />


                    <Button
                        android:id="@+id/clear_box_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/btn_4_background"
                        android:padding="8dp"
                        android:text="@string/clear_box_btn_label"
                        android:textAllCaps="false"
                        android:textColor="@color/my_white" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/btm_keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="1"
            android:textColor="@color/my_white" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="2"
            android:textColor="@color/my_white" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="3"
            android:textColor="@color/my_white" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="4"
            android:textColor="@color/my_white" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="5"
            android:textColor="@color/my_white" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="6"
            android:textColor="@color/my_white" />

    </LinearLayout>


</RelativeLayout>