<resources>
    <string name="app_name">Sandoken</string>
    <string name="welcome_text">Welcome on Sandoken</string>
    <string name="welcome_btn">Play</string>
    <string name="stats_btn">Statistics</string>
    <string name="win_message_title">Congratulations!</string>
    <string name="win_message_desc">Congratulations, you finished this grid!\n XYZ% of players have succeeded this Sandoken!\n ABC player(s) have finished this Sandoken</string>
    <string name="mode_crayon_label">Pencil mode</string>
    <string name="edition_stylo">STYLO</string>
    <string name="edition_crayon">CRAYON</string>

    <string name="raz_btn_label">Clear the grid</string>
    <string name="raz_btn_desc">Are you sure you want to clear the grid?</string>


    <string name="new_game_btn_label">New game</string>
    <string name="new_game_btn_desc">Are you sure you want to start a new grid?</string>

    <string name="rules_btn_label">Rules</string>
    <string name="clear_box_btn_label">Clear box</string>
    <string name="help_btn_label">Help</string>
    <string name="rules_title">Rules</string>
    <string name="rules_body">
        The game is a grid of numbers to complete invented by a Japanese teacher, Tetsuya Miyamoto. Close to Sudoku, it mixes intuition, logic and calculation.\n\n
        Sudoku-style, the goal of the game is to fill all grid squares with numbers from 1 to 6 without ever having twice the same number in the same column or on the same line.\n\n
        The grid consists of 6 rows and 6 columns containing blocks delimited by a thick blue line. The number written on the top left of each block is the result of the operation performed with the numbers of the boxes in the same block.\n\n
        Each grid has only one solution.\n\n
        For an addition, there are few possibilities, example "5+" can be written 4 + 1 or 1 + 4 or 3 + 2 or 2 + 3, it is blocks already found that will allow us to find the right addition. Still remembering the rule: the same number can only be present once per line and once per column.\n\n
        To help you, a pencil mode is available to enter the possibilities of a box and so proceed by elimination to find the right number.\n\n
        Good game !</string>


    <!-- Stats activity -->
    <string name="st_play">Games played</string>
    <string name="st_resolved">Successful games</string>
    <string name="st_pourcentage">Percentage of success</string>

    <!-- Fragment dialog strings -->
    <string name="ok_label">OK</string>
    <string name="ko_label">Cancel</string>


    <!-- API Toasts -->
    <string name="api_new_game_impossible">Cannot load new game</string>
    <string name="api_get_stats_impossible">Cannot load statistics</string>

</resources>
