<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.StatsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/st_play"
        android:textColor="@color/btn_main"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/st2_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:textColor="@color/btn_4_background"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/st_resolved"
        android:textColor="@color/btn_main"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/st2_resolved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:textColor="@color/btn_4_background"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/st_pourcentage"
        android:textColor="@color/btn_main"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/st2_pourcentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:padding="5dp"
        android:textColor="@color/btn_4_background"
        android:textStyle="bold" />

</LinearLayout>